#20 implemented learning path in overview